--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <div class='masthead'>
+        <div class='masthead__menu-and-search'>
+            <div class="masthead__hamburger">
+                <i class="fa fa-bars"></i>
+            </div>
+            <div class="masthead__search">
+                <i class="fa fa-search"></i>
+            </div>
+        </div>
+        <div class='masthead__actions'>
+            <button>Subscribe Now</button>
+            <button>Log In</button>
+            <i class="fas fa-cog"></i>
+        </div>
+        <div class='masthead__technologies'>
+            <div class="masthead__technologies_techbox">
+                <span>CSS</span>
+                <span>HTML</span>
+                <span>JavaScript</span>
+                <span>Python</span>
+            </div>
+
+        </div>
+        <div class='masthead__date'>Tuesday, October 31, 2020</div>
+        <div class='masthead__logo'>
+            <img src="./images/AA_Times_Logo.png">
+        </div>
+        <div class='masthead__paper'>
+            <i class="far fa-newspaper"></i>Today's Paper
+        </div>
+    </div>
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.0.12/css/all.css'>
+    <link rel='stylesheet' href='./stylesheets/main-styles.css'>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>App Academy Times</title>
+</head>
+
+<body>
+
+</body>
+
+</html>
