--- a/index.html
+++ b/index.html
@@ -42,7 +42,46 @@
 </head>
 
 <body>
+    <nav class="main">
+        <ul>
+            <li>World</li>
+            <li>SWE Online</li>
+            <li>San Francisco</li>
+            <li>New York</li>
+            <li>Jumpstart</li>
+            <li>Marketing</li>
+            <li>Sales</li>
+            <li>TalentMatch</li>
+            <li>Alumni</li>
+            <li>All</li>
 
+        </ul>
+    </nav>
+    <div class="interests-bar">
+        <img src="./images/dog.png" class="interests-bar__image">
+        <span class="interests-bar__headline">Dog Programmers</span>
+        <span class="interests-bar__story">Dogs are learning to code at an incredible pace.</span>
+        <img src="./images/cat.png" class="interests-bar__image">
+        <span class="interests-bar__headline">Cats and Coding</span>
+        <span class="interests-bar__story">Cats are on the rise as the #1 example for coding demos.</span>
+        <img src="./images/plug.png" class="interests-bar__image">
+        <span class="interests-bar__headline">Plugging stuff in</span>
+        <span class="interests-bar__story">Good or Bad? Find out now.</span>
+        <div class="interests-bar__stock-price">
+            <span>AAO</span>
+            <span class="interests-bar__price">+100%</span>
+        </div>
+        <div class="interests-bar__stock-price">
+            <span>SWE</span>
+            <span class="interests-bar__price">+150%</span>
+        </div>
+        <div class="interests-bar__stock-price">
+            <span>CAT</span>
+            <span class="interests-bar__price">+111%</span>
+        </div>
+        <img src="./images/sun-icon.png" class="interests-bar__image">
+        <div class="interests-bar__image">77°F</div>
+    </div>  
 </body>
 
 </html>
